@@ -3,11 +3,8 @@
   <record id="1" aka="AAAAAAAAAAE=">
     <pickle>
       <tuple>
-        <tuple>
-          <string>Products.PythonScripts.PythonScript</string>
-          <string>PythonScript</string>
-        </tuple>
-        <none/>
+        <global name="PythonScript" module="Products.PythonScripts.PythonScript"/>
+        <tuple/>
       </tuple>
     </pickle>
     <pickle>
@@ -69,8 +66,7 @@
         <item>
             <key> <string>_body</string> </key>
             <value> <string>context = state_change[\'object\']\n
-if context.getSimulationState()!=\'draft\':\n
-  context.activate().updateCausalityState()\n
+context.activate().updateCausalityState()\n
 </string> </value>
         </item>
         <item>
